{
  "version": 4,
  "terraform_version": "1.4.1",
  "serial": 96,
  "lineage": "4c69ca76-5038-aab8-b959-00226c295b41",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:241063769786:internet-gateway/igw-07878d2cde66fb0db",
            "id": "igw-07878d2cde66fb0db",
            "owner_id": "241063769786",
            "tags": {
              "Name": "multiverse"
            },
            "tags_all": {
              "Name": "multiverse"
            },
            "vpc_id": "vpc-0d863689a2c987b1d"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:241063769786:loadbalancer/app/mvws920230315152323499300000009/fd017315c0ccd9c1",
            "arn_suffix": "app/mvws920230315152323499300000009/fd017315c0ccd9c1",
            "desync_mitigation_mode": "defensive",
            "dns_name": "mvws920230315152323499300000009-1045866215.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:241063769786:loadbalancer/app/mvws920230315152323499300000009/fd017315c0ccd9c1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mvws920230315152323499300000009",
            "name_prefix": "mvws9",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c8349ee4cb58573a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-004dc38504bb61f5a"
              },
              {
                "subnet_id": "subnet-00ac04371b59243b4"
              }
            ],
            "subnets": [
              "subnet-004dc38504bb61f5a",
              "subnet-00ac04371b59243b4"
            ],
            "tags": {
              "Name": "multiverse"
            },
            "tags_all": {
              "Name": "multiverse"
            },
            "vpc_id": "vpc-0d863689a2c987b1d",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.eu_west_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:241063769786:listener/app/mvws920230315152323499300000009/fd017315c0ccd9c1/98cb36cc31ee8415",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:241063769786:targetgroup/mvws920230315152321118300000005/80cc278f8d3aab32",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:241063769786:listener/app/mvws920230315152323499300000009/fd017315c0ccd9c1/98cb36cc31ee8415",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:241063769786:loadbalancer/app/mvws920230315152323499300000009/fd017315c0ccd9c1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.this",
            "aws_lb_target_group.http",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.eu_west_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:241063769786:targetgroup/mvws920230315152321118300000005/80cc278f8d3aab32",
            "arn_suffix": "targetgroup/mvws920230315152321118300000005/80cc278f8d3aab32",
            "connection_termination": false,
            "deregistration_delay": "0",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:241063769786:targetgroup/mvws920230315152321118300000005/80cc278f8d3aab32",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "mvws920230315152321118300000005",
            "name_prefix": "mvws9",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d863689a2c987b1d"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07878d2cde66fb0db",
            "id": "r-rtb-01cf342562d5690c91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01cf342562d5690c9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:241063769786:route-table/rtb-01cf342562d5690c9",
            "id": "rtb-01cf342562d5690c9",
            "owner_id": "241063769786",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07878d2cde66fb0db",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "multiverse-public"
            },
            "tags_all": {
              "Name": "multiverse-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d863689a2c987b1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de9bddc95097571b",
            "route_table_id": "rtb-01cf342562d5690c9",
            "subnet_id": "subnet-004dc38504bb61f5a"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.eu_west_2"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070a33193061c68ec",
            "route_table_id": "rtb-01cf342562d5690c9",
            "subnet_id": "subnet-00ac04371b59243b4"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.eu_west_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:241063769786:security-group/sg-0c8349ee4cb58573a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04f65bc3783b3fc0c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0c8349ee4cb58573a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mvws9-alb20230315152321121000000008",
            "name_prefix": "mvws9-alb",
            "owner_id": "241063769786",
            "revoke_rules_on_delete": true,
            "tags": {
              "Name": "multiverse-alb"
            },
            "tags_all": {
              "Name": "multiverse-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d863689a2c987b1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:241063769786:security-group/sg-04f65bc3783b3fc0c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-04f65bc3783b3fc0c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c8349ee4cb58573a"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mvws9-ec220230315152321120500000007",
            "name_prefix": "mvws9-ec2",
            "owner_id": "241063769786",
            "revoke_rules_on_delete": true,
            "tags": {
              "Name": "multiverse-ec2"
            },
            "tags_all": {
              "Name": "multiverse-ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d863689a2c987b1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_from_web_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-4128597122",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c8349ee4cb58573a",
            "security_group_rule_id": "sgr-094862ec04f29e70e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_to_ec2_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 80,
            "id": "sgrule-4159869901",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c8349ee4cb58573a",
            "security_group_rule_id": "sgr-0c10faf19c43f273c",
            "self": false,
            "source_security_group_id": "sg-04f65bc3783b3fc0c",
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_from_alb_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 80,
            "id": "sgrule-2720273310",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04f65bc3783b3fc0c",
            "security_group_rule_id": "sgr-0eb5a24f0f515584c",
            "self": false,
            "source_security_group_id": "sg-0c8349ee4cb58573a",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_to_web_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1645827872",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04f65bc3783b3fc0c",
            "security_group_rule_id": "sgr-0898cb9f43e35df85",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:241063769786:subnet/subnet-004dc38504bb61f5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004dc38504bb61f5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241063769786",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "multiverse-1"
            },
            "tags_all": {
              "Name": "multiverse-1"
            },
            "vpc_id": "vpc-0d863689a2c987b1d"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.eu_west_2"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:241063769786:subnet/subnet-00ac04371b59243b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ac04371b59243b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241063769786",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "multiverse-2"
            },
            "tags_all": {
              "Name": "multiverse-2"
            },
            "vpc_id": "vpc-0d863689a2c987b1d"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.eu_west_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:241063769786:vpc/vpc-0d863689a2c987b1d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06901ed6853a7bead",
            "default_route_table_id": "rtb-0e0cc12c6e792a3ab",
            "default_security_group_id": "sg-0602b212b0c380965",
            "dhcp_options_id": "dopt-0331dd34419c20bbb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d863689a2c987b1d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e0cc12c6e792a3ab",
            "owner_id": "241063769786",
            "tags": {
              "Name": "multiverse"
            },
            "tags_all": {
              "Name": "multiverse"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:241063769786:vpc-endpoint/vpce-05b66eecdeaf7850c",
            "cidr_blocks": [
              "52.95.150.0/24",
              "52.95.191.0/24",
              "52.95.142.0/23",
              "16.12.16.0/23",
              "3.5.244.0/22",
              "52.219.219.0/24",
              "52.95.144.0/24",
              "52.95.148.0/23",
              "16.12.15.0/24"
            ],
            "id": "vpce-05b66eecdeaf7850c",
            "owner_id": "241063769786",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7ca54015",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-01cf342562d5690c9"
            ],
            "service_name": "com.amazonaws.eu-west-2.s3",
            "state": "available",
            "tags": {
              "Name": "multiverse"
            },
            "tags_all": {
              "Name": "multiverse"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0d863689a2c987b1d"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    }
  ]
}